--- a/Makefile.dirs
+++ b/Makefile.dirs
@@ -1,2 +1,2 @@
-CEU_DIR     = $(error set absolute path to "<ceu>" repository)
-CEU_SDL_DIR = $(error set absolute path to "<ceu-sdl>" repository)
+CEU_DIR     = ../ceu
+CEU_SDL_DIR = ../ceu-sdl
